# partymap-backend

./: .env.dev.example  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.postgres  README.md  README.txt  Server-side Markers clustering using PostgreSQL + PostGIS and NodeJS – Blog about satisfying the programming itch….html  alter_sqlalchemy_tables.sh  apidoc  appserver.py  autogen_types.ts  celeryconfig.py  clean-docker-for-mac.sh  clustering.js  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.ppt.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  et HEAD^  eventlocations.csv  llms.md  manage.py  package-lock.json  partymap@partymap.com  pyproject.toml  readme old.txt  requiremens.txt  requirements copy.txt  requirements.txt  sample.json  seed_db.py  uwsgi.ini  wsgi.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Server-side Markers clustering using PostgreSQL + PostGIS and NodeJS – Blog about satisfying the programming itch…_files/: a.css  a.html  a.js  a_002.css  a_002.js  a_003.css  a_003.js  css.css  css_002.css  gprofiles.js  hovercard.css  jetpack-carousel.css  master.html  remote-login.js  services.css  shCore.css  shThemeDefault.css  style.css  w.js  webfont.js  wpgroho.js
Server-side Markers clustering using PostgreSQL + PostGIS and NodeJS – Blog about satisfying the programming itch…_files/master_data/: a.html  jed.js  jquery.js  jquery_002.js  likes-rest.js  postmessage.js  underscore.js
api_schemas/: addEvent.example.json  addEvent.schema.json  updateEvent.schema.json
backup8.10.19/: api.py  config.py
backup8.10.19/models/: Event.py  EventArtist.py  EventImage.py  EventTag.py  User.py  __init__.py
migrations/: env.py
migrations/versions/: 00be8cc1fb1b_.py  00d3babaf02c_.py  02d27a42d856_.py  0bc8c771f9c9_.py  0fd45e49eea9_.py  1b782b9a80e5_.py  1d2dad4acddc_.py  1d4cdddaee45_.py  1e78d6321d59_.py  28639cf3fdfd_.py  2b38c63195ff_.py  2f7da62f5bc8_.py  311106c09f52_.py  37062e5d7acf_.py  3ac0642ae279_.py  3ddc424be5f3_.py  3ed1a7d4d695_.py  466b435f3676_.py  4c2d5c7f9f01_add_event_embeddings.py  522ec5e30dd0_.py  52aa828365a5_.py  52c8e9c70f99_.py  54af5853e19e_.py  55053bc1a28d_.py  553cfdfbee64_.py  5af082a45cac_.py  5c230ffb3f3c_.py  5c868ae9fc4c_.py  5cc1e3fd6c1a_.py  5e6b64586378_.py  616314189e7b_.py  650f87336b31_.py  6554996c91a3_.py  66b35054f1b9_.py  6ba3231bca57_.py  6c21df31c70e_.py  7242ba3a5ac5_.py  72977f71675b_.py  74471dc17e40_.py  7703499bf5ab_.py  (+36 more)
migrations_old/versions/: 000cd5209f06_.py  0a68369a5897_.py  14e83424094d_.py  15aede430eac_.py  27f2400c56cd_.py  2b2c563827ad_.py  2d09fb096713_.py  3abde8f1ffcb_.py  45465c516e6e_.py  52c8e9c70f99_.py  5c230ffb3f3c_.py  5c868ae9fc4c_.py  5f79bcd01a9b_change_eventcontribution_pk.py  621c517dc54b_.py  68193b370df1_.py  69f0f7f1a22b_.py  6ee378b84f77_.py  85d3ca768891_.py  8f00db9070d1_.py  925bf6134a63_.py  96dc1162c5e1_.py  a3d9ebe1eb4c_.py  a4bb40da99b4_.py  d233b54b7462_.py
migrationsbak/versions/: 05ec1ee13039_.py  28639cf3fdfd_.py  6318b4edda2c_.py  6816b92dd7cd_.py  71d84b5a84cb_.py  a261445b82a1_.py  b36658b8005b_.py  d2a3bdfcc890_.py
migrationsbak2/versions/: 4f0077e3335b_.py  59c429d588aa_.py  ab81bd10877c_.py  e8043d2a4cc2_.py
pmapi/: GET managed events.txt  __init__.py  application.py  celery_tasks.py  celery_worker.py  cli.py  config.py  custom_sqlalchemy.py  db_types.py  event_listeners.py  exceptions.py  scripts.py  tasks.py  utils.py  validate.py  worker.py
pmapi backup/pmapi/: NearbyEvents.py  api.py  apiOld.py  application.py  eventlocations.csv  oauth.py
pmapi/activity/: controllers.py  resource.py  schemas.py
pmapi/admin/: views.py
pmapi/auth/: controllers.py  oauth_fb_resource.py  oauth_google_resource.py  oauth_resource.py  resource.py
pmapi/common/: controllers.py  permissions.py  schemas.py
pmapi/event/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/event_album/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/event_artist/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/event_artist (disabled)/: model.py
pmapi/event_contribution/: controllers.py  model.py  resource.py  schemas.py
pmapi/event_contribution (disabled)/: controllers.py  model.py  resource.py
pmapi/event_date/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/event_image/: controllers.py  model.py  schemas.py
pmapi/event_location/: controllers.py  model.py  resource.py  schemas.py
pmapi/event_review/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/event_tag/: controllers.py  model.py  resource.py  schemas.py
pmapi/extensions/: __init__.py  flask_celery.py
pmapi/favorite_events/: model.py  resource.py
pmapi/favorite_events (disabled)/: resource.py
pmapi/feedback/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/hcaptcha/: controllers.py
pmapi/mail/: __init__.py  controllers.py
pmapi/media_item/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/metrics/: controllers.py  model.py  permissions.py  resource.py  schemas.py
pmapi/notification/: controllers.py  model.py
pmapi/report/: controllers.py  model.py  permissions.py  resource.py  (+1 more)
scripts/: backfill_event_embeddings.py
templates/: login.html  oauth_redirect.html  sitemap.xml
tests/: conftest.py  test.py  test_activity_web.py  test_api_schemas.py  test_auth_edge_cases.py  test_auth_web.py  test_event.py  test_event_artist.py  test_event_artist_web.py  test_event_date.py  test_event_date_web.py  test_event_location.py  test_event_location_web.py  test_event_review.py  test_event_review_web.py  test_event_tag.py  test_event_tags.py  test_event_tags_web.py  test_event_web.py  test_favorite_interested_web.py  test_feedback_web.py  test_media_item.py  test_media_item_web.py  test_metrics_web.py  test_reports_web.py  test_search_web.py  test_services_web.py  test_suggestions_web.py  test_user_web.py  test_users.py  test_users_web.py
utils/: NearbyEvents.py  clustering.py  populate_db.py
(+39 files in other folders)
