[project]
name = "pmapi"
version = "1.0.0"
description = "PartyMap API - Event discovery and management platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Peter Steven", email = "info@partymap.com"}
]
keywords = ["flask", "api", "events", "parties", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Flask & Extensions
    "flask==1.1.2",
    "flask-admin==1.5.7",
    "flask-apispec==0.11.0",
    "flask-babel==2.0.0",
    "flask-caching==1.9.0",
    "flask-cors==3.0.9",
    "flask-dance==3.2.0",
    "flask-login==0.5.0",
    "flask-migrate==2.7.0",
    "flask-restful==0.3.10",
    "flask-script==2.0.6",
    "flask-sqlalchemy==2.4.4",
    "flask-track-usage @ git+https://github.com/pjamessteven/flask-track-usage",
    "jinja2==2.11.2",
    "markupsafe==1.1.1",
    "werkzeug==1.0.1",
    "wtforms==2.3.3",
    "itsdangerous==1.1.0",
    "click==8.1.2",
    "blinker==1.4",
    
    # Database
    "sqlalchemy==1.4.54",
    "sqlalchemy-continuum==1.4.2",
    "sqlalchemy-utils==0.41.2",
    "alembic==1.13.0",
    "psycopg2-binary==2.9.9",
    "geoalchemy2==0.8.4",
    
    # API & Serialization
    "apispec==6.3.0",
    "marshmallow==3.20.1",
    "marshmallow-enum==1.5.1",
    "marshmallow-polyfield==5.10",
    "webargs==8.4.0",
    "aniso8601==9.0.1",
    
    # Authentication & Security
    "pyjwt==2.8.0",
    "cryptography==41.0.7",
    "oauthlib==3.1.0",
    "requests-oauthlib==1.3.0",
    
    # HTTP & Networking
    "requests==2.31.0",
    "urllib3==2.1.0",
    "aiohttp==3.11.11",
    "aiohappyeyeballs==2.4.4",
    "aiosignal==1.3.2",
    "async-timeout==5.0.1",
    "frozenlist==1.5.0",
    "multidict==6.1.0",
    "propcache==0.2.1",
    "yarl==1.18.3",
    
    # Celery & Task Queue
    "celery==5.4.0",
    "kombu==5.4.2",
    "amqp==5.2.0",
    "billiard==4.2.0",
    "vine==5.1.0",
    
    # Data Processing
    "numpy==1.26.4",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
    "pillow==10.2.0",
    "pycountry==24.6.1",
    "pygeohash==1.2.0",
    "reverse-geocode==1.6.5",
    "timezonefinder==4.5.0",
    
    # Date/Time
    "python-dateutil==2.8.2",
    "pytz==2020.4",
    "tzdata==2024.2",
    "tzlocal==5.0.1",
    "arrow==1.0.3",
    
    # iCal/Calendar
    "icalendar==5.0.7",
    "ics==0.7.2",
    "ics-vtimezones==2020.1",
    "khal==0.11.1",
    
    # Utilities
    "attrs==20.3.0",
    "python-magic==0.4.24",
    "pyperclip==1.8.2",
    "six==1.16.0",
    "configobj==5.0.8",
    
    # GeoIP
    "geoip2==4.8.1",
    "maxminddb==2.6.3",
    
    # External Services
    "googlemaps==4.10.0",
    "sendgrid==6.6.0",
    "python-http-client==3.3.2",
    "starkbank-ecdsa==1.1.0",
    "sentry-sdk==0.19.4",
    
    # Video/Media
    "ffmpy==0.3.0",
    "pythonvideoconverter==1.0.3",
    
    # CLI
    "click-didyoumean==0.3.0",
    "click-log==0.4.0",
    "click-plugins==1.1.1",
    "click-repl==0.2.0",
    "prompt-toolkit==3.0.19",
    "wcwidth==0.2.5",
    "urwid==2.1.2",
    
    # Type Generation
    "typemallow2 @ git+https://github.com/pjamessteven/Typemallow2@cacba56d2cb432acabfc18b1cd712f43b4fcff2c",
    "py2ng==0.1.3",
    
    # Async
    "asgiref==3.3.1",
    "greenlet==3.1.1",
    
    # i18n
    "babel==2.16.0",
    
    # Misc
    "pg8000==1.19.2",
    "scramp==1.4.0",
    "asn1crypto==1.4.0",
    "pycparser==2.21",
    "cffi==1.16.0",
    "pyasn1==0.5.1",
    "rsa==4.9",
    "pexpect==4.8.0",
    "ptyprocess==0.7.0",
    "dnspython==1.16.0",
    "tatsu==5.8.3",
    "siwa==0.0.7",
    "pyxdg==0.28",
    "python-editor==1.0.4",
    "mako==1.1.3",
    
    # Server
    "uwsgi==2.0.27",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==6.2.3",
    "pytest-flask==1.2.0",
    "pytest-timeout==1.4.2",
    "testing-postgresql==1.3.0",
    "testing-common-database==2.0.3",
    
    # Linting & Formatting
    "black==20.8b1",
    "flake8==3.8.3",
    "mccabe==0.6.1",
    "pycodestyle==2.6.0",
    "pyflakes==2.2.0",
    
    # Type Checking
    "mypy-extensions==0.4.3",
    "typed-ast==1.5.5",
    "typing-extensions==4.12.2",
    
    # Utilities
    "autopep8==1.5.5",
    "iniconfig==1.1.1",
    "packaging==23.2",
    "pyparsing==2.4.7",
    "toml==0.10.2",
    "py==1.10.0",
    "pluggy==0.13.1",
    "pathspec==0.8.1",
    
    # Project Generation
    "cookiecutter==1.7.2",
    "jinja2-time==0.2.0",
    "poyo==0.5.0",
    "binaryornot==0.4.4",
    
    # Virtual Env
    "virtualenv==20.0.23",
    "virtualenv-clone==0.5.4",
    "distlib==0.3.0",
    "filelock==3.0.12",
    "appdirs==1.4.4",
    "pipenv==2020.11.15",
]

[dependency-groups]
dev = [
    "pytest>=6.2.3",
    "pytest-flask>=1.2.0",
    "black>=20.8b1",
    "flake8>=3.8.3",
]

[project.scripts]
pmapi = "manage:manager.run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.pip]
universal = true

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  migrations
  | .venv
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.pydocstyle]
convention = "google"
